# Ohmimetro_Embarcatech2

./: CMakeLists.txt  README.md  diagram.json  main.c  wokwi.toml
lib/Display_Bibliotecas/: ssd1306.c
libs/Display_Bibliotecas/: font.h  ssd1306.c
libs/Matriz_Bibliotecas/: matriz_led.c  matriz_led.h
